# ocs2

ocs2_ddp/src/: GaussNewtonDDP.cpp  SLQ.cpp
ocs2_frank_wolfe/test/: QuadraticTest.cpp
ocs2_mpc/src/: MPC_BASE.cpp
ocs2_mpcnet/ocs2_legged_robot_mpcnet/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_whole_body_model/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_whole_body_model/include/ocs2_whole_body_model/: AccessHelperFunctions.h  FactoryFunctions.h  ModelHelperFunctions.h  PinocchioWholeBodyDynamics.h  PinocchioWholeBodyDynamicsAD.h  WholeBodyModelInfo.h  WholeBodyModelPinocchioMapping.h  WholeBodyModelRbdConversions.h
ocs2_pinocchio/ocs2_whole_body_model/include/ocs2_whole_body_model/implementation/: AccessHelperFunctionsImpl.h  ModelHelperFunctionsImpl.h
ocs2_pinocchio/ocs2_whole_body_model/src/: FactoryFunctions.cpp  ModelHelperFunctions.cpp  PinocchioWholeBodyDynamics.cpp  PinocchioWholeBodyDynamicsAD.cpp  WholeBodyModelInfo.cpp  WholeBodyModelPinocchioMapping.cpp  WholeBodyModelRbdConversions.cpp
ocs2_pinocchio/ocs2_whole_body_model/test/: test_dynamics.cpp
ocs2_raisim/ocs2_legged_robot_raisim/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot_legged/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot_ros/: CMakeLists.txt
ocs2_robotic_examples/ocs2_legged_robot_ros_legged/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_urdf/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_urdf_ros/: package.xml  (+1 more)
(+160 files in other folders)
