<?xml version="1.0"?>
<package format="2">
  <name>ocs2_whole_body_model</name>
  <version>0.0.0</version>
  <description>The ocs2_whole_body_model package</description>

  <maintainer email="zcy@stu.hit.edu.cn">zhang</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_clang_tools</build_depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_robotic_assets</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>pinocchio</depend>
</package>
